GES_META_CONTAINER_GET_INTERFACE failure
/usr/include/gstreamer-1.0/ges/ges-meta-container.h Lines: 29
Version: 1.24.2.0
// old:
#define GES_META_CONTAINER_GET_INTERFACE (inst) (G_TYPE_INSTANCE_GET_INTERFACE ((inst), GES_TYPE_META_CONTAINER, GESMetaContainerInterface))
// new:
#define GES_META_CONTAINER_GET_INTERFACE(inst) (G_TYPE_INSTANCE_GET_INTERFACE ((inst), GES_TYPE_META_CONTAINER, GESMetaContainerInterface))