subprojects/gst-editing-services/ges/ges-meta-container.h
@@ -26,7 +26,7 @@
 G_BEGIN_DECLS
 
 #define GES_TYPE_META_CONTAINER                 (ges_meta_container_get_type ())
-#define GES_META_CONTAINER_GET_INTERFACE (inst) (G_TYPE_INSTANCE_GET_INTERFACE ((inst), GES_TYPE_META_CONTAINER, GESMetaContainerInterface))
+#define GES_META_CONTAINER_GET_INTERFACE(inst)  (G_TYPE_INSTANCE_GET_INTERFACE ((inst), GES_TYPE_META_CONTAINER, GESMetaContainerInterface))
 GES_API
 G_DECLARE_INTERFACE(GESMetaContainer, ges_meta_container, GES, META_CONTAINER, GObject);
 
